# borer

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh  clean.sh  compilerflags.cmake
doc/: doxygen.conf
include/: BrrBase.h  BrrFinalizer.h  BrrLogger.h  BrrMemory.h  BrrPtrGuard.h  BrrPtrHolder.h  BrrRWLock.h  BrrRWLockGuard.h  BrrThreadAttr.h  BrrThreadBase.h  BrrTime.h  BrrTypes.h  ThreadBase.h
source/: BrrLogger.cpp  BrrRWLock.cpp  BrrRWLockGuard.cpp  BrrThreadAttr.cpp  BrrThreadBase.cpp  BrrTime.cpp  RWLock.cpp  RWLockGuard.cpp  ThreadBase.cpp
unit_tests/: CMakeLists.txt
unit_tests/include/: BrrTestBase.h  TestPtrGuard.h  TestRWLock.h  TestRWLockGuard.h  TestThreadBase.h
unit_tests/source/: BrrTestBase.cpp  TestPtrGuard.cpp  TestRWLock.cpp  TestRWLockGuard.cpp  TestThreadBase.cpp  main.cpp
